# deltaver

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  Taskfile.yml  lint-requirements.txt  lint_requirements.txt  pyproject.toml  setup.cfg
.github/workflows/: pr-check.yml  release.yml  rust-ci.yml
deltaver/: __init__.py  __main__.py  cached_package_list.py  cached_sorted_versions.py  config.py  days_delta.py  decr_delta.py  delta.py  entry.py  exceptions.py  excluded_reqs.py  file_not_foudn_safe_reqs.py  filtered_package_list.py  fk_package.py  fk_sorted_versions.py  fk_supports_str.py  fk_version_delta.py  fk_version_list.py  formats.py  freezed_reqs.py  golang_package_list.py  golang_reqs.py  hex_package.py  hex_package_list.py  mix_lock_reqs.py  npmjs_package_list.py  npmjs_versions_sorted_by_semver.py  overtaking_safe_version_delta.py  package.py  package_info.py  package_lock_reqs.py  parsed_reqs.py  parsed_requirements.py  parsed_version.py  poetry_lock_reqs.py  pypi_package.py  pypi_package_list.py  pypi_version_delta.py  pypi_versions_sorted_by_semver.py  sorted_package_list.py  (+5 more)
deltaver/_internal/: cached_package_list.py  cached_sorted_versions.py  config.py  days_delta.py  decr_delta.py  delta.py  exceptions.py  excluded_reqs.py  file_not_foudn_safe_reqs.py  filtered_package_list.py  fk_package.py  fk_sorted_versions.py  fk_version_delta.py  fk_version_list.py  formats.py  freezed_reqs.py  golang_package_list.py  golang_reqs.py  hex_package_list.py  mix_lock_reqs.py  npmjs_package_list.py  npmjs_versions_sorted_by_semver.py  overtaking_safe_version_delta.py  package.py  package_lock_reqs.py  parsed_reqs.py  parsed_version.py  poetry_lock_reqs.py  pypi_package.py  pypi_package_list.py  pypi_version_delta.py  pypi_versions_sorted_by_semver.py  sorted_package_list.py  sorted_versions.py  version_delta.py  version_list.py  versions_sorted_by_date.py
deltaver/version_list/: filtered_package_list.py  fk_version_list.py  npmjs_package_list.py  pypi_package_list.py
src/: cli.rs  config.rs  core.rs  lib.rs  main.rs  parsers.rs
src/core/: package.rs
src/parsers/: basic.rs  parsed_reqs.rs  parser.rs
tests/fixtures/: cryptography_response.json  eljson_response.json  gitdb_response.json  go.sum  greenlet_response.json  httpx_pypi_response.json  pyproject.toml  requirements.txt  smmap_pypi_response.json  vue_npmjs_response.json
tests/it/: test_app.py  test_entry.py  test_mix_lock_integration.py
tests/unit/: test_config.py  test_config_ctor.py  test_days_delta.py  test_delta.py  test_golang_package_list.py  test_golang_reqs.py  test_mix_lock_reqs.py  test_package.py  test_parsed_reqs.py  test_parsed_version.py  test_pypi_package.py  test_unit_entry.py  test_version_delta.py
