[package]
name = "deltaver"
version = "0.0.0"
edition = "2024"
authors = ["Almaz Ilaletdinov <a.ilaletdinov@yandex.ru>"]
description = "Calculate dependency lag in days"
license = "MIT"
readme = "README.md"
repository = "https://github.com/blablatdinov/deltaver"

[[bin]]
name = "deltaver"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
reqwest = { version = "0.13", features = ["json", "blocking"] }
tokio = { version = "1.0", features = ["full"] }
semver = "1.0"
chrono = "0.4"
dirs = "5.0"
indicatif = "0.18"
console = "0.15"
rayon = "1.7"
url = "2.4"
parking_lot = "0.12"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.8"
mockito = "1.0"
insta = "1.34"
