# The MIT License (MIT).
#
# Copyright (c) 2023-2025 Almaz Ilaletdinov <a.ilaletdinov@yandex.ru>
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
# MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
# IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
# DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR
# OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE
# OR OTHER DEALINGS IN THE SOFTWARE.

[tool.poetry]
name = "deltaver"
version = "1.0.0"
description = ""
packages = [
  {include = "deltaver"}
]
authors = ["Almaz Ilaletdinov <a.ilaletdinov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
attrs = ">=23.0"
httpx = "^0"
packaging = ">=23"
typer = ">=0.13"
rich = "^14.0.0"
toml = "^0.10.2"
typing-extensions = "^4.9"
pytz = ">=2018.4"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.2"
respx = "0.22.0"
time-machine = "3.1.0"
pytest-cov = "7.0.0"
ruff = "0.14.9"
mypy = "1.19.0"
typing-extensions = "4.15.0"
types-toml = "0.10.8.20240310"
pytest-randomly = "4.0.1"
ondivi = "0.7.2"
types-pytz = "2025.2.0.20251108"
vulture = "2.14"
flake8-one-class = "^0.0.1"
eo-styleguide = "0.1.1"

[tool.poetry.scripts]
deltaver = "deltaver.entry:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 120
target-version = "py310"
output-format = "concise"

[tool.ruff.lint]
select = ["ALL"]
fixable = [
  "F401",  # Unused import
  "Q000",  # Double quotes
  "I001",  # sort imports
]
ignore = [
  "ARG001",  # Unused function argument
  "ARG002",  # Unused method argument
  "D203",    # no-blank-line-before-class
  "D213",    # multi-line-summary-first-line
  "D418",    # Function decorated with `@overload` shouldn't contain a docstring
  "D401",    # First line of docstring should be in imperative mood
  "FBT001",  # Boolean-typed positional argument in function definition
  "FBT002",  # Boolean-typed positional argument in function definition
  "FIX002",  # Line contains TODO, consider resolving the issue
  "FLY002",  # We not use f-strings
  "RUF100",  # WPS primary linter
  "RUF001",  # Project contain cyrillic symbols
  "RUF002",  # Project contain cyrillic symbols
  "RET505",  # Unnecessary `elif` after `return` statement
  "RET506",  # Unnecessary `elif` after `raise` statement
  "UP030",   # We use explicit references
  "UP032",   # We not use f-strings
  "UP004",   # Class `PrayerReaction` inherits from `object`
  "TD",      # "todo" formats
  "PLR630",  # We disrespect staticmethods
  "TC001",   # Move application import `deltaver._internal.parsed_reqs.ParsedReqs` into a type-checking block
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "S101",    # use of `assert` detected
  "PLR2004", # Magic value
  "PLR0913", # Too many arguments to function call
  "INP001",  # Add an `__init__.py`. Tests is closed to import
]

[tool.pytest.ini_options]
markers = [
  "slow: slow tests",
]

